{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 389,
  "lineage": "468591d8-a8fb-ce85-40e0-7b934cf23948",
  "resources": [
    {
      "module": "module.nsg_association",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgcreation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "westeurope",
            "name": "app-nsg",
            "resource_group_name": "bicep_poc",
            "security_rule": [],
            "tags": {
              "Environment": "DEVELOPMENT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg_association.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "westeurope",
            "name": "db-nsg",
            "resource_group_name": "bicep_poc",
            "security_rule": [],
            "tags": {
              "Environment": "DEVELOPMENT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg_association.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_association",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgrules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.0.20"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/app-nsg/securityRules/Allow-Inbound-aws-allow",
            "name": "Allow-Inbound-aws-allow",
            "network_security_group_name": "app-nsg",
            "priority": 400,
            "protocol": "*",
            "resource_group_name": "bicep_poc",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.0.10"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg_association.azurerm_network_security_group.nsgcreation",
            "module.nsg_association.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.0.20"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/db-nsg/securityRules/Allow-Inbound-aws-allow",
            "name": "Allow-Inbound-aws-allow",
            "network_security_group_name": "db-nsg",
            "priority": 400,
            "protocol": "*",
            "resource_group_name": "bicep_poc",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.0.10"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg_association.azurerm_network_security_group.nsgcreation",
            "module.nsg_association.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.0.20"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Outbound",
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/app-nsg/securityRules/Allow-Outbound-gcp-allow",
            "name": "Allow-Outbound-gcp-allow",
            "network_security_group_name": "app-nsg",
            "priority": 400,
            "protocol": "*",
            "resource_group_name": "bicep_poc",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.0.10"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg_association.azurerm_network_security_group.nsgcreation",
            "module.nsg_association.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.0.20"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Outbound",
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/db-nsg/securityRules/Allow-Outbound-gcp-allow",
            "name": "Allow-Outbound-gcp-allow",
            "network_security_group_name": "db-nsg",
            "priority": 400,
            "protocol": "*",
            "resource_group_name": "bicep_poc",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.0.10"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg_association.azurerm_network_security_group.nsgcreation",
            "module.nsg_association.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_creation",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgcreation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "westeurope",
            "name": "app-nsg",
            "resource_group_name": "bicep_poc",
            "security_rule": [],
            "tags": {
              "Environment": "DEVELOPMENT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg_creation.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "westeurope",
            "name": "db-nsg",
            "resource_group_name": "bicep_poc",
            "security_rule": [],
            "tags": {
              "Environment": "DEVELOPMENT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg_creation.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_creation",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgrules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.0.20"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/app-nsg/securityRules/Allow-Inbound-aws-allow",
            "name": "Allow-Inbound-aws-allow",
            "network_security_group_name": "app-nsg",
            "priority": 400,
            "protocol": "*",
            "resource_group_name": "bicep_poc",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.0.0.10"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsg_creation.azurerm_network_security_group.nsgcreation",
            "module.nsg_creation.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.nsg_creation",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/app-subnet"
          },
          "dependencies": [
            "module.nsg_creation.azurerm_network_security_group.nsgcreation",
            "module.nsg_creation.data.azurerm_resource_group.current",
            "module.vnet_subnet.azurerm_network_ddos_protection_plan.ddos",
            "module.vnet_subnet.azurerm_subnet.subnet",
            "module.vnet_subnet.azurerm_virtual_network.vnet",
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/db-subnet"
          },
          "dependencies": [
            "module.nsg_creation.azurerm_network_security_group.nsgcreation",
            "module.nsg_creation.data.azurerm_resource_group.current",
            "module.vnet_subnet.azurerm_network_ddos_protection_plan.ddos",
            "module.vnet_subnet.azurerm_subnet.subnet",
            "module.vnet_subnet.azurerm_virtual_network.vnet",
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.nsgrules",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgcreation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "westeurope",
            "name": "app-nsg",
            "resource_group_name": "bicep_poc",
            "security_rule": [],
            "tags": {
              "Environment": "DEVELOPMENT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nsgrules.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_subnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/nsg-app-subnet",
            "location": "westeurope",
            "name": "nsg-app-subnet",
            "resource_group_name": "bicep_poc",
            "security_rule": [],
            "tags": {
              "Environment": "DEVELOPMENT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/nsg-db-subnet",
            "location": "westeurope",
            "name": "nsg-db-subnet",
            "resource_group_name": "bicep_poc",
            "security_rule": [],
            "tags": {
              "Environment": "DEVELOPMENT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_subnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app-subnet",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/routeTables/rt-app-subnet",
            "location": "westeurope",
            "name": "rt-app-subnet",
            "resource_group_name": "bicep_poc",
            "route": [],
            "subnets": [
              "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/app-subnet"
            ],
            "tags": {
              "Environment": "DEVELOPMENT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/routeTables/rt-db-subnet",
            "location": "westeurope",
            "name": "rt-db-subnet",
            "resource_group_name": "bicep_poc",
            "route": [],
            "subnets": [
              "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/db-subnet"
            ],
            "tags": {
              "Environment": "DEVELOPMENT"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "bicep_poc",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-tieto"
          },
          "dependencies": [
            "module.vnet_subnet.azurerm_network_ddos_protection_plan.ddos",
            "module.vnet_subnet.azurerm_virtual_network.vnet",
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "bicep_poc",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "virtual_network_name": "vnet-tieto"
          },
          "dependencies": [
            "module.vnet_subnet.azurerm_network_ddos_protection_plan.ddos",
            "module.vnet_subnet.azurerm_virtual_network.vnet",
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_subnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "app-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/app-subnet",
            "route_table_id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/routeTables/rt-app-subnet",
            "subnet_id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/app-subnet"
          },
          "dependencies": [
            "module.vnet_subnet.azurerm_network_ddos_protection_plan.ddos",
            "module.vnet_subnet.azurerm_route_table.rt",
            "module.vnet_subnet.azurerm_subnet.subnet",
            "module.vnet_subnet.azurerm_virtual_network.vnet",
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        },
        {
          "index_key": "db-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/db-subnet",
            "route_table_id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/routeTables/rt-db-subnet",
            "subnet_id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/db-subnet"
          },
          "dependencies": [
            "module.vnet_subnet.azurerm_network_ddos_protection_plan.ddos",
            "module.vnet_subnet.azurerm_route_table.rt",
            "module.vnet_subnet.azurerm_subnet.subnet",
            "module.vnet_subnet.azurerm_virtual_network.vnet",
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_subnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "491b8b32-4290-4e46-8034-ba56a4e78951",
            "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto",
            "location": "westeurope",
            "name": "vnet-tieto",
            "resource_group_name": "bicep_poc",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/app-subnet",
                "name": "app-subnet",
                "security_group": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/app-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/virtualNetworks/vnet-tieto/subnets/db-subnet",
                "name": "db-subnet",
                "security_group": "/subscriptions/5a0855b9-426d-429e-83a9-ea7c4796e9a4/resourceGroups/bicep_poc/providers/Microsoft.Network/networkSecurityGroups/db-nsg"
              }
            ],
            "tags": {
              "Environment": "DEVELOPMENT"
            }
          },
          "dependencies": [
            "module.vnet_subnet.azurerm_network_ddos_protection_plan.ddos",
            "module.vnet_subnet.data.azurerm_resource_group.current"
          ]
        }
      ]
    }
  ]
}